Don't confuse the rewrite engine ( remove the kaltura swf in iframe while doing rewrites )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1490 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameFallforward.html
+++ b/modules/KalturaSupport/tests/iFrameFallforward.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
 
 <script type="text/javascript">		
+	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
 	mw.setConfig( 'Kaltura.IframeRewrite', true );
 </script>
 </head>
