added fullscreen support for the iframe client api
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1491 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -33,11 +33,12 @@
 	
 	<script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
+	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
 	
 	mw.ready(function(){		
 		mw.load(  ['mw.EmbedPlayerNative' , '$j.postMessage' , 'mw.IFramePlayerApiClient', 'JSON' ] , function(){						
 			// Add resize binding:			
-			$j('#resizable').resizable();		
+			$j('#resizable').resizable();
 			
 			// Setup iframe rewrite for new source selection:  
 			$j('#displayIframe').click(function(){ 				
