--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -290,9 +290,48 @@
 <div id="container">
 	<h1 class="title">Kaltura Dynamic Player version 3 ( HTML5lib backend test ) </h1>
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.	<br/>
-	<a href="?forceMobileHTML5AndIframe"> Force Iframe HTML5</a> for testing iframe html5	<br/>	<br/>
+	<a href="?forceMobileHTML5AndIframe"> Force Iframe HTML5</a> for testing iframe html5	<br/>	
+	<a href="?forceIframe"> Force Universal Iframe </a> for testing  Universal Iframe ( will be flash gui for flash and html5 for browsers with html5<br/><br/>
 	<p>Hover over the parameters or APIs from the list for description, click to test &amp; learn more.</p>
-	<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="FolgersCoffe.mpeg" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
+	<div id="playerTarget" style="width:400px;height:330px;"></div>
+	<script type="text/javascript">
+		if( document.URL.indexOf( '?forceIframe' ) !== -1 ){
+			// Enable the iframe api for the kdp mapping test
+			mw.setConfig('EmbedPlayer.EnableIframeApi', true );
+			// Embed The kaltura player: 
+			kalturaIframeEmbed( 'playerTarget', {
+				'entry_id': '0_uka1msg4', 
+				'wid' : '_243342',
+				'uiconf_id' :'2890431'
+			});
+		} else {
+			$('#playerTarget').remove();
+			document.write('<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" ' +
+					'allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" ' + 
+					'height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" ' + 
+					'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' + 
+					'resource="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" ' + 
+					'data="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4"> ' + 
+					'<param name="allowFullScreen" value="true" /> ' + 
+					'<param name="allowNetworking" value="all" /> ' + 
+					'<param name="allowScriptAccess" value="always" />' + 
+					'<param name="bgcolor" value="#000000" />' + 
+					'<param name="flashVars" value="&" />' + 
+					'<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" />' + 
+					'<a href="http://corp.kaltura.com">video platform</a> ' + 
+					'<a href="http://corp.kaltura.com/video_platform/video_management">video management</a> ' + 
+					'<a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> ' + 
+					'<a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> ' + 
+					'<a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2" /> ' +
+					'<span property="dc:description" content="" />' + 
+					'<span property="media:title" content="FolgersCoffe.mpeg" /> ' + 
+					'<span property="media:width" content="400" /> ' + 
+					'<span property="media:height" content="330" /> ' +
+					'<span property="media:type" content="application/x-shockwave-flash" /> ' + 
+				'</object>');
+		}
+	</script>
+	
 </div>	
 <div id="cleardiv" style="clear: both; margin-top: 10px;"></div>
 </body></html>
