added embedPlayer option to display or hide options menu
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1494 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="kdp3_mapping_files/prettify.js"></script>
 	
 	
-	 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
+	 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script> 
 	<!-- <script type="text/javascript" src="http://html5.kaltura.org/js"></script> -->
 	<!--<script type="text/javascript" src="../../../mwEmbed.js"></script>-->
 	
@@ -116,7 +116,7 @@
 								'enableAlerts',
 								'freePreviewEnd'];
 		
-		function jsCallbackReady () {
+		function jsCallbackReady () {			
 			$("#notifications").append( 'jsCallbackReady' + "\n");
 			$('#kdp3').get(0).addJsListener("volumeChanged", "volumeChangedHandler");
 			$('#kdp3').get(0).addJsListener("playerStateChange", "playerStateChangeHandler");
@@ -305,8 +305,7 @@
 				'uiconf_id' :'2890431'
 			});
 		} else {
-			$('#playerTarget').remove();
-			document.write('<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" ' +
+			$j('#playerTarget').html('<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" ' +
 					'allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" ' + 
 					'height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" ' + 
 					'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' + 
