fixed refrence to $j
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1495 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -305,7 +305,7 @@
 				'uiconf_id' :'2890431'
 			});
 		} else {
-			$j('#playerTarget').html('<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" ' +
+			$( '#playerTarget' ).html('<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" ' +
 					'allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" ' + 
 					'height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" ' + 
 					'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' + 
