--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h3> Kaltura iFrame Resizable Player + iFrame cross-domain player api </h3>
+	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.<br /><br />
 	<span style="width:300px;float:left">
 		Widget id: <input id="kwidgetid" size="15" value="_243342"><br />
 		Entry id: <input id="kentryid" size="15" value="0_swup5zao"> <br />
@@ -21,7 +22,7 @@
 	<textarea id="playPauseLog" style="width:50x;height:40px;"></textarea>
 		<br/>
 			<br/>	<br/>
-	<div id="resizable" style="padding: 2.5em;width:400px;height:300px;border-style:solid;border-width:5px;">					
+	<div id="resizable" style="padding: 2.5em;width:400px;height:300px;border-style:solid;border-width:5px;">		
 		<div id="iframeHolder" style="width:100%;height:100%"></div>		 		
 	<div/>	
 	
@@ -34,9 +35,10 @@
 	<script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
 	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
+	mw.setConfig('EmbedPlayer.EnableFullscreen', false );
 	
 	mw.ready(function(){		
-		mw.load(  ['mw.EmbedPlayerNative' , '$j.postMessage' , 'mw.IFramePlayerApiClient', 'JSON' ] , function(){						
+		mw.load(  ['mw.EmbedPlayerNative' , '$j.postMessage' , 'mw.IFramePlayerApiClient', 'JSON' ] , function(){			
 			// Add resize binding:			
 			$j('#resizable').resizable();
 			
