word clarity of universal iframe mode
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1503 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -292,7 +292,7 @@
 	<h1 class="title">Kaltura Dynamic Player version 3 ( HTML5lib backend test ) </h1>
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.	<br/>
 	<a href="?forceMobileHTML5AndIframe"> Force Iframe HTML5</a> for testing iframe html5	<br/>	
-	<a href="?forceIframe"> Force Universal Iframe </a> for testing  Universal Iframe ( will be flash gui for flash and html5 for browsers with html5<br/><br/>
+	<a href="?forceIframe"> Force Universal Iframe </a> for testing  Universal Iframe ( will be flash gui for browsers with flash and html5 for browsers without flash<br/><br/>
 	<p>Hover over the parameters or APIs from the list for description, click to test &amp; learn more.</p>
 	<div id="playerContainer"> 
 		<div id="kdp3" style="width:400px;height:330px;"></div>
