--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -14,6 +14,7 @@
 	 controls>
 	 	<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
 		<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb400p.ogv" />
+		<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/bbb_trailer_360p.webm" />
 </video>
 
 
