Added some configs
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1513 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/UIConfTest.html
+++ b/modules/KalturaSupport/tests/UIConfTest.html
@@ -4,7 +4,9 @@
 
 <script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true>"></script>  
 <script type="text/javascript">		
-	mw.setConfig( 'Kaltura.IframeRewrite', true );	
+	mw.setConfig( 'Kaltura.IframeRewrite', true );
+	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
+	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
 </script>
 </head>
 <body>
