--- a/modules/KalturaSupport/tests/Ad_support_OpenX.html
+++ b/modules/KalturaSupport/tests/Ad_support_OpenX.html
@@ -33,6 +33,7 @@ mat=vast&charset=UTF_8&nz=1&zones=z1=182104</a><br>
 	<BR><BR><BR>
  	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
  	<script type="text/javascript">
+ 	MW_IFRAME_PLAYER = false;
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
  		mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
