adding html5 advertisement test
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1560 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -4,6 +4,10 @@
     "HTML Tidy for Windows (vers 14 February 2006), see www.w3.org">
 	
     <title></title>
+  <!--
+ 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
+  -->
+  <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
   </head>
   <body>
     <h1>
@@ -56,7 +60,6 @@
     </div><br>
     <br>
 	<BR><BR><BR><BR><BR><BR>
- 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
  	<script type="text/javascript">
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
