--- a/modules/KalturaSupport/tests/WatermarkTest.html
+++ b/modules/KalturaSupport/tests/WatermarkTest.html
@@ -2,7 +2,7 @@
 <head>
 <title>Fall forward html5</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true"></script>  
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );
 	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
