--- a/modules/KalturaSupport/tests/IframeTest.html
+++ b/modules/KalturaSupport/tests/IframeTest.html
@@ -15,7 +15,7 @@
 				<span style="font-size: 16px;">Entry id:</span> <input style="width: 100px;" id="kentryid" value="0_uka1msg4" />
 				<input style="width: 100px; font-size: 12px;" id="showVideo" type="button" value="Change entry" disabled="true">
 			</div><br />
-
+<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers <br /><br />
 			<div id="videoContainer" style="width:400px">
 
 			</div>
