--- a/modules/KalturaSupport/tests/UniversalIframeNoApi.html
+++ b/modules/KalturaSupport/tests/UniversalIframeNoApi.html
@@ -3,13 +3,13 @@
 <head>
 <title>Universal iFrame</title>
 
-</script>
 </head>
 <body>
 <h2> Universal iFrame </h2>
 <br />
 
-<iframe width="400" height="300" src="../../../mwEmbedFrame.php/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"></iframe>
+<iframe width="400" height="300" src="../../../mwEmbedFrame.php/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"></iframe><br />
+<!--<iframe width="400" height="300" src="http://kaldev.kaltura.com/html5/html5lib/v1.2/mwEmbedFrame.php/wid/_66133/uiconf_id/1003120/entry_id/0_aegngv6i"></iframe>-->
 </body>
 </html>
 
