* Fixed playManifest issue * Updated kalturaTests to use php loader
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1588 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_OpenX.html
+++ b/modules/KalturaSupport/tests/Ad_support_OpenX.html
@@ -31,7 +31,7 @@ mat=vast&charset=UTF_8&nz=1&zones=z1=182104</a><br>
     </div>
     <br>
 	<BR><BR><BR>
- 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
+ 	<script src="../../../mwEmbedLoader.php" type="text/javascript"></script>
  	<script type="text/javascript"> 		
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
