some ugly hacks to support IE8 universal iframe javascript bridge
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1592 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/UniversalIframeWithApi.html
+++ b/modules/KalturaSupport/tests/UniversalIframeWithApi.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 <title>Universal iFrame with API</title>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 </head>
 <body>
 <h2> Universal iFrame with API</h2>
 <br />
-
-<iframe width="400" height="300" src="../../../mwEmbedFrame.php/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"></iframe><br />
+<script type="text/javascript" src="../../../mwEmbedLoader.php#wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"></script><br />
 </body>
 </html>
 
