--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -136,7 +136,8 @@
 					$('#kdp3').get(0).addJsListener( fName, fName+"Handler2" );
 				}
 			});
-			// test setKDPAttribute:
+			
+			// Test setKDPAttribute:
 			$('#kdp3').get(0).setKDPAttribute( "configProxy.flashvars", "autoPlay", "true" );
 		}
 		
