added "kalturaDynamicPlayer" object support
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1594 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/UniversalIframeWithApi.html
+++ b/modules/KalturaSupport/tests/UniversalIframeWithApi.html
@@ -6,7 +6,14 @@
 <body>
 <h2> Universal iFrame with API</h2>
 <br />
-<script type="text/javascript" src="../../../mwEmbedLoader.php#wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"></script><br />
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script><br />
+
+<object id="UniquePlayerIdGoesHere" class="kalturaDynamicPlayer" width="400" height="330">
+	<param name="entry_id" value="0_uka1msg4"></param>
+	<param name="widget_id" value="_243342"></param>
+	<param name="uiconf_id" value="2877502"></param>
+	<!--  All the span metadata and SEO goes here -->
+</object>
 </body>
 </html>
 
