--- a/modules/AdSupport/tests/Ad_Events_test.html
+++ b/modules/AdSupport/tests/Ad_Events_test.html
@@ -33,7 +33,7 @@
    	<a id="addOverlay" href="#">Update Overlay text</a>
     </br>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
- 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
+  <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
  	<script type="text/javascript">
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
  		mw.setConfig( 'EmbedPlayer.OverlayControls', false);
