--- a/modules/KalturaSupport/tests/AccessControlTest.html
+++ b/modules/KalturaSupport/tests/AccessControlTest.html
@@ -2,7 +2,7 @@
 <head>
 <title>Access Control Test</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
