--- a/modules/KalturaSupport/tests/HoveringControl.html
+++ b/modules/KalturaSupport/tests/HoveringControl.html
@@ -2,7 +2,7 @@
 <head>
 <title>Hovering Contoller Test</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 
 <script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
